
This file shows the changes in recent releases of TinyMCE for MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

TinyMCE 4.1.2
====================================
- Fixed language issue with modxlink plugin

TinyMCE 4.1.1
====================================
- Fixed issue with Tiny preventing save bar loading on derivative Resource types

TinyMCE 4.1.0
====================================
- Fixed issues with context support of thumbnails and relative paths
- Fixed issues with language overriding
- Added theme_advanced_blockformats system setting
- Fixed bugs with width of tinymce in panels
- Fixed issue with language loading in non-english languages and modxlink plugin
- Enabled resizing by default on editors
- Added "Toggle Editor" checkbox to main content panels
- Fixed issue where buttons/sourceview didn't mark form dirty

TinyMCE 4.0.5
====================================
- Added fixes for bugs with template changing and richtext tvs

TinyMCE 4.0.4
====================================
- Fixed random bugs with ampersands and other issues
- Fixed bugs in relative path mapping
- Fixed bugs that occur only in strict PHP environments

TinyMCE 4.0.3
====================================
- Fixed bug where TinyMCE wasn't working with TVs
- Moved config array to properties array to prevent collusions of config vars in tiny JS
- Added setting to toggle between uncompressed TinyMCE JS library
- Fixed random issue with element being loaded twice
- Fixed JSON issue with PHP installs less than 5.3.0
- Fixed issues with richtext TVs

TinyMCE 4.0.2
====================================
- Fixed issues with contextual persistence in file browser

TinyMCE 4.0.1
====================================
- Updated TinyMCE to 3.3.8, fixed random bugs
- Added cirkuit skin and made it default
- Cleaned up code execution in plugin

TinyMCE 4.0.0
====================================